--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 	</head>
 	<body>
+		<div ng-controller="StoreController as store">
+			<h1> Product Name </h1>
+			<h2> $Product Price</h2>
+			<p> Product Description </p>
+		</div>
 		<script type="text/javascript" src="js/angular.min.js"></script>
 		<script type="text/javascript" src="js/app.js"></script>
 		<p>{{"hello" + " you"}}</p>
