--- a/index.html
+++ b/index.html
@@ -2,15 +2,29 @@
 <html ng-app="store">
 	<head>
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
-	</head>
-	<body>
-		<div ng-controller="StoreController as store">
-			<h1> Product Name </h1>
-			<h2> $Product Price</h2>
-			<p> Product Description </p>
-		</div>
 		<script type="text/javascript" src="js/angular.min.js"></script>
-		<script type="text/javascript" src="js/app.js"></script>
-		<p>{{"hello" + " you"}}</p>
+    	<script type="text/javascript" src="js/app.js"></script>
+	</head>
+	<body class="list-group" ng-controller="StoreController as store">
+		<!-- Product Container -->
+		<div class="list-group-item" ng-repeat="product in store.products">
+			<h3>
+				{{product.name}}
+				<em class="pull-right">{{ product.price | currency }} </em>
+			</h3>
+
+			<!-- Image Gallery -->
+			<div class="gallery">
+				<div class="img-wrap">
+					<img ng-src="{{product.images[0]}}" />
+				</div>
+		
+				<ul class="img-thumbnails clearfix">
+					<li ng-repeat="image in product.images" class="small-image pull-left thumbnail" >
+						<img ng-src="{{image}}" />
+					</li>
+				</ul>
+			</div>
+		</div>
 	</body>
 </html>
