--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			</h3>
 
 			<!-- Image Gallery -->
-			<div class="gallery">
+			<div class="gallery" ng-show="product.images.length">
 				<div class="img-wrap">
 					<img ng-src="{{product.images[0]}}" />
 				</div>
@@ -25,6 +25,24 @@
 					</li>
 				</ul>
 			</div>
+			<!-- Experimental Section -->
+			<section ng-controller="PanelController as panel">
+				<ul class="nav nav-pills">
+					<li ng-class="{ active: panel.isSelected(1) }">
+						<a href ng-click="panel.selectTab(1)">Description</a>
+					</li>
+					<li ng-class="{ active: panel.isSelected(2) }">
+						<a href ng-click="panel.selectTab(2)">Specifications</a>
+					</li>
+					<li ng-class="{ active: panel.isSelected(3) }">
+						<a href ng-click="panel.selectTab(3)">Reviews</a>
+					</li>
+				</ul>
+				<div class="panel" ng-show="panel.isSelected(1)">
+					<h4>Description </h4>
+					<p>{{product.description}}</p>
+				</div>
+			</section>
 		</div>
 	</body>
 </html>
