--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
 					<h4>Description </h4>
 					<blockquote>{{product.description}}</blockquote>
 				</div>
+				<div class="panel" ng-show="panel.isSelected(2)">
+					<h4>Specifications </h4>
+					<blockquote>Shine: {{product.shine}}</blockquote>
+				</div>
+				<div class="panel" ng-show="panel.isSelected(3)">
+					<h4>Reviews </h4>
+					<blockquote></blockquote>
+				</div>
 			</section>
 		</div>
 	</body>
