--- a/product-tabs.html
+++ b/product-tabs.html
@@ -1,29 +1,4 @@
-<!DOCTYPE html>
-<html ng-app="store">
-	<head>
-		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
-		<script type="text/javascript" src="js/angular.min.js"></script>
-    	<script type="text/javascript" src="js/app.js"></script>
-	</head>
-	<body class="list-group" ng-controller="StoreController as store">
-		<!-- Product Container -->
-		<div class="list-group-item" ng-repeat="product in store.products | orderBy:'price'">
-			<h3>
-				{{product.name}}
-				<em class="pull-right">{{ product.price | currency }} </em>
-			</h3>
-
-			<!-- Image Gallery -->
-			<div class="gallery" ng-controller="GalleryController as gallery" ng-show="product.images.length">
-				<img ng-src="{{product.images[gallery.current]}}" />
-				<ul class="list-inline thumbs">
-					<li ng-repeat="image in product.images" class="small-image pull-left thumbnail" >
-						<img ng-src="{{image}}" />
-					</li>
-				</ul>
-			</div>
-			<!-- Experimental Section -->
-			<section ng-controller="PanelController as panel">
+<section>
 				<ul class="nav nav-pills">
 					<li ng-class="{ active: panel.isSelected(1) }">
 						<a href ng-click="panel.selectTab(1)">Description</a>
@@ -85,6 +60,3 @@
 							<blockquote></blockquote>
 				</div>
 			</section>
-		</div>
-	</body>
-</html>
